# greptimedb-tests

./: .gitignore  LICENSE.md  README.md  create_database.py  run_tests.sh
.github/workflows/: format-check.yml  test.yml
adbc-postgres/: main.py  pyproject.toml  test_greptimedb.py
go-tests/: .golangci.yml  README.md  driver_test.go  go.mod  go.sum  ingester_test.go  otel_test.go  run_tests.sh
java-jdbc-tests/: .gitignore  README.md  pom.xml
java-jdbc-tests/src/test/java/com/greptime/jdbc/: GreptimeDBBasicTypesTest.java
java-tests/: README.md  pom.xml  run_tests.sh
java-tests/src/test/java/com/greptime/ingester/: GreptimeDBIngesterTest.java
java-tests/src/test/java/com/greptime/jdbc/: GreptimeDBJdbcTest.java
java-tests/src/test/java/com/greptime/otel/: GreptimeDBOtelTest.java
otel-tests/: README.md  run_tests.sh
otel-tests/nodejs/: README.md  package.json  run_tests.sh
otel-tests/nodejs/tests/: otel.test.js
python-tests/: README.md  pyproject.toml  requirements.txt  run_tests.sh
python-tests/tests/: test_adbc_postgres.py  test_greptimedb_driver.py  test_greptimedb_jdbc.py  test_otel.py
