[project]
name = "greptimedb-python-tests"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mysql-connector-python>=8.0.33",
    "psycopg2-binary>=2.9.9",
    "pytz>=2023.3",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
    "adbc-driver-postgresql>=1.2.0",
    "pandas>=3.0.0",
    "polars",
    "pyarrow"
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
]
